--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -2,29 +2,28 @@
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
+# Link to a PDF of your resume/CV from the menu.
+# To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
 
 main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
+  - name: News
+    url: '#news'
     weight: 20
+  - name: Publications
+    url: '#publication'
+    weight: 30
   - name: Projects
     url: '#projects'
-    weight: 30
-  - name: Talks
-    url: '#talks'
     weight: 40
-  - name: Publications
-    url: '#featured'
+  - name: Posts
+    url: '#posts'
     weight: 50
-  - name: Contact
-    url: '#contact'
+  # - name: Contact
+  #   url: '#contact'
+  #   weight: 60
+  - name: CV
+    url: uploads/resume.pdf
     weight: 60
-
-# Link to a PDF of your resume/CV from the menu.
-# To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
-#  - name: CV
-#    url: uploads/resume.pdf
-#    weight: 70
