--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -18,12 +18,12 @@ main:
   - name: Publications
     url: '#publication'
     weight: 30
-  - name: Projects
-    url: '#projects'
-    weight: 40
-  - name: Posts
-    url: '#posts'
-    weight: 50
+  # - name: Projects
+  #   url: '#projects'
+  #   weight: 40
+  # - name: Posts
+  #   url: '#posts'
+  #   weight: 50
   - name: CV
     url: uploads/CV_ChanghunKim.pdf
     weight: 60
