--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -24,6 +24,6 @@ main:
   # - name: Posts
   #   url: '#posts'
   #   weight: 50
-  - name: CV
-    url: uploads/CV_ChanghunKim.pdf
-    weight: 60
+  # - name: CV
+  #   url: uploads/CV_ChanghunKim.pdf
+  #   weight: 60
