--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -21,6 +21,7 @@ removePathAccents: true
 
 module:
   imports:
+    - path: github.com/drumpt/hugo-blox-hoonine
     - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify-cms
     - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify
     - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-reveal
