--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -9,14 +9,14 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  # - name: News
-  #   url: '#news'
-  #   weight: 20
-  - name: Experience
-    url: '#experience'
-    weight: 25
+  - name: News
+    url: '#news'
+    weight: 20
   - name: Publications
     url: '#publication'
+    weight: 25
+  - name: Experience
+    url: '#experience'
     weight: 30
   # - name: Projects
   #   url: '#projects'
