--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,22 +8,31 @@
 main:
   - name: Home
     url: '#about'
-    weight: 10
+    weight: 1
   - name: News
     url: '#news'
-    weight: 20
+    weight: 2
   - name: Publications
     url: '#publication'
-    weight: 25
+    weight: 3
   - name: Experience
     url: '#experience'
-    weight: 30
+    weight: 4
+  - name: Honors
+    url: '#honors'
+    weight: 6
+  - name: Teaching
+    url: '#teaching'
+    weight: 7
+  - name: Service
+    url: '#service'
+    weight: 8
   # - name: Projects
   #   url: '#projects'
-  #   weight: 40
-  # - name: Posts
-  #   url: '#posts'
-  #   weight: 50
+  #   weight: 9
+  # - name: Blog
+  #   url: 'blog'
+  #   weight: 11
   # - name: CV
   #   url: uploads/CV_ChanghunKim.pdf
-  #   weight: 60H
+  #   weight: 12
